Organização do código fonte e pequenas modificações

--- a/apps/backend/views/index.phtml
+++ b/apps/backend/views/index.phtml
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/dashboard.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap-datepicker.min.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap-table.css"/>
+        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap-switch.min.css"/>
         <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
@@ -31,6 +32,7 @@
         <script src="<?= URL_PROJECT ?>js/bootstrap-datepicker.min.js"> </script>
         <script src="<?= URL_PROJECT ?>js/bootstrap-table.js"> </script>
         <script src="<?= URL_PROJECT ?>locales/bootstrap-table-pt-BR.js"> </script>
+        <script src="<?= URL_PROJECT ?>js/bootstrap-switch.min.js"> </script>
         <script src="<?= URL_PROJECT ?>js/custom.js"> </script>
 
         <?= $this->getContent(); ?>
