--- a/apps/backend/views/settings/facebookTab.phtml
+++ b/apps/backend/views/settings/facebookTab.phtml
@@ -4,34 +4,24 @@
             <form id="facebook-account" name="facebook-account" role="form">
                 <div class="panel-heading">
                     <label style="font-size: 18px;"> Adicionar Link da Página</label>
-                    </div>
-                    <div class="form-group input-group col-sm-10">
-                        <span class="input-group-addon">facebook.com/</span>
-                        <input type="text" name="page_name" class="form-control" value="<?= $fb_page_name ?>" placeholder="exemplo">
-                    </div>
-                    <div class="form-group input-group col-sm-6">
-                        <?php if(empty($fb_page_name)){ ?>
-                            <a href="#" id="save-facebook-account" class="btn btn-block btn-primary btn-success"><span class="glyphicon glyphicon-ok"></span> Salvar</a>
-                        <?php } else{ ?>
-                            <a href="#" id="edit-facebook-account" class="btn btn-block btn-primary btn-warning"><span class="glyphicon glyphicon-edit"></span> Alterar</a>
+                </div>
+                <div class="form-group input-group col-sm-10">
+                    <input type="checkbox" class="my-checkbox" checked>
+                </div>
+                <div class="form-group input-group col-sm-10">
+                    <span class="input-group-addon">facebook.com/</span>
+                    <input type="text" name="page_name" class="form-control" value="<?= $fb_page_name ?>" placeholder="exemplo">
+                </div>
+                <div class="form-group input-group col-sm-6">
+                    <?php if(empty($fb_page_name)){ ?>
+                        <a href="#" id="save-facebook-account" class="btn btn-block btn-primary btn-success"><span class="glyphicon glyphicon-ok"></span> Salvar</a>
+                    <?php } else{ ?>
+                        <a href="#" id="edit-facebook-account" class="btn btn-block btn-primary btn-warning"><span class="glyphicon glyphicon-edit"></span> Alterar</a>
                     <?php }?>
                 </div>
             </form>
         </div>
         </div>
-    <div class="col-lg-4">
-        <div class="panel panel-warning">
-            <div class="panel-heading">
-               <h5><i class="fa fa-exclamation-triangle "></i> <b>Atenção!</b></h5>
-            </div>
-            <div class="panel-body">
-            <p>Inserindo sua página no facebook é possível monitorar as curtidas da mesma na página inicial do sistema</p>
-            </div>
-            <div class="panel-footer">
-
-            </div>
-        </div>
-    </div>
 </div>
 
 
