--- a/apps/backend/views/settings/index.phtml
+++ b/apps/backend/views/settings/index.phtml
@@ -20,7 +20,7 @@
                 </li>
                 <li><a href="#google" data-toggle="tab"><i class="fa fa-2x fa-google"></i> Google Api</a>
                 </li>
-                <li><a href="#twitter" data-toggle="tab"><i class="fa fa-2x fa-twitter"></i> Twitter</a>
+                <li><a href="#twitter" data-toggle="tab"><i class="fa fa-2x fa-twitter"></i> Twitter Api</a>
                 </li>
                 <li><a href="#facebook" data-toggle="tab"><i class="fa fa-2x fa-facebook"></i> Facebook</a>
                 </li>
@@ -37,3 +37,9 @@
     <!-- /.panel-default -->
 </div>
 <!-- /.col-lg-8 -->
+
+<script>
+$(".my-checkbox").bootstrapSwitch({
+    state: false
+});
+</script>
