--- a/apps/backend/views/update/index.phtml
+++ b/apps/backend/views/update/index.phtml
@@ -1,9 +1,9 @@
 <div class="panel panel-default" >
     <div class="panel-heading">
         <?php if(!$new_version){ ?>
-        <label style="font-size: 30px;"><i class="glyphicon glyphicon-eye-open"></i> Sistema Atualizado!</label>
+        <label style="font-size: 30px;"><i class="fa fa-check "></i> Sistema Atualizado!</label>
         <?php } else{ ?>
-        <label style="font-size: 30px;"><i class="glyphicon glyphicon-eye-open"></i> Nova versão Disponível!</label>
+        <label style="font-size: 30px;"><i class="fa fa-refresh"></i> Nova versão Disponível!</label>
         <?php } ?>
     </div>
     <hr>
