--- a/apps/backend/views/settings/preferencesTab.phtml
+++ b/apps/backend/views/settings/preferencesTab.phtml
@@ -13,6 +13,9 @@
                     <span class="input-group-addon"><i class="fa fa-link"></i></span>
                     <input type="text" name="url_project" class="form-control" value="<?= $url ?>" placeholder="URL">
                 </div>
+                <div class="form-group input-group col-offset-2">
+                    <label>Envio de E-mails: </label><input type="checkbox" class="my-checkbox" checked>
+                </div>
                 <div class="form-group input-group col-sm-10">
 
                         <span class="input-group-addon"><i class="fa fa-google"></i> <i class="fa fa-envelope"></i></span>
@@ -35,22 +38,6 @@
                     <?php } ?>
                 </div>
             </form>
-        </div>
-    </div>
-    <div class="col-lg-4">
-        <div class="panel panel-warning">
-            <div class="panel-heading">
-               <h5> <i class="fa fa-exclamation-triangle "></i> <b>Informações Importantes!</b></h5>
-            </div>
-            <div class="panel-body">
-                <b>Título Blog</b> <i class="fa fa-long-arrow-right"></i> Nome de exibição do blog. O nome inserido aqui será utilizado como nome do blog criado.
-                <hr>
-                <b>URL</b> <i class="fa fa-long-arrow-right"></i> Endereço do blog, por exemplo: www.blog.com.br. Este endereço deve ser o domínio criado para seu site. Utilizado para envio de emails e compartilhamento de conteúdo.
-                <hr>
-                <b>Email</b> <i class="fa fa-long-arrow-right"></i> A conta de email utilizada para envio de informações para usuários, como notificações ou novas senhas.
-            </div>
-            <div class="panel-footer">
-            </div>
         </div>
     </div>
 </div>
@@ -84,6 +71,7 @@ $("#edit-preferences").click(function(){
         }
     });
 });
+
 
 
 /**
