--- a/apps/backend/views/dashboard/index.phtml
+++ b/apps/backend/views/dashboard/index.phtml
@@ -10,28 +10,23 @@
     <div >
         <!-- /.panel-heading -->
         <div class="panel-body">
-            <div class="list-group">
-                <div class="panel panel-warning">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <i class="fa fa-3x fa-exchange"></i>
-                            </div>
-                            <div class="col-xs-9 text-right">
-                                <div class="huge"><?= $total_sessions?></div>
-                                <div>Acessos Únicos</div>
+            <?php if($analytics_active){ ?>
+                <div class="list-group">
+                    <div class="panel panel-warning">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-3x fa-exchange"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div class="huge"><?= $total_sessions?></div>
+                                    <div>Acessos Únicos</div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <!--<a href="#">
-                        <div class="panel-footer">
-                            <span class="pull-left">Ver Mais</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>-->
                 </div>
-            </div>
+            <?php } ?>
             <div class="panel panel-green">
                 <div class="panel-heading">
                     <div class="row">
@@ -44,34 +39,23 @@
                         </div>
                     </div>
                 </div>
-                <!--<a href="#">
-                    <div class="panel-footer">
-                        <span class="pull-left">Ver Mais</span>
-                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </div>
-                </a>-->
             </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-xs-3">
-                            <i class="fa fa-4x fa-facebook"></i>
-                        </div>
-                        <div class="col-xs-9 text-right">
-                            <div class="huge"><?= $facebook_likes ?></div>
-                            <div>Curtidas</div>
+            <?php if($fb_active){ ?>
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <i class="fa fa-4x fa-facebook"></i>
+                            </div>
+                            <div class="col-xs-9 text-right">
+                                <div class="huge"><?= $facebook_likes ?></div>
+                                <div>Curtidas</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!--<a href="#">
-                    <div class="panel-footer">
-                        <span class="pull-left">Ver Mais</span>
-                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </div>
-                </a>-->
-            </div>
+            <?php } ?>
+            <?php if($tw_active){ ?>
             <div class="panel panel-info">
                 <div class="panel-heading">
                     <div class="row">
@@ -84,14 +68,8 @@
                         </div>
                     </div>
                 </div>
-                <!--<a href="#">
-                    <div class="panel-footer">
-                        <span class="pull-left">Ver Mais</span>
-                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </div>
-                </a>-->
             </div>
+            <?php } ?>
             <!-- /.panel-body -->
         </div>
         <!-- /.panel -->
