--- a/apps/backend/views/login/newCodeResetPassword.phtml
+++ b/apps/backend/views/login/newCodeResetPassword.phtml
@@ -6,33 +6,39 @@
         </h1>
     </div>
 </header>
-<div class="container container-fluidr center-block">
-    <div class="content-login modal-content center-block">
-        <h3 class="text-center">Esqueceu sua senha?</h3>
-        <p class="text-center">Se você esqueceu sua senha, redefina-a aqui</p>
-        <div class="panel-body">
-            <form class="form">
-                <fieldset>
-                    <div class="form-group">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                            <!--EMAIL ADDRESS-->
-                            <input id="emailInput" placeholder="endereço de e-mail" class="form-control" type="email" oninvalid="setCustomValidity('Por favor insira um email valido')" required="">
+<?php if($send_mail){?>
+    <div class="container container-fluidr center-block">
+        <div class="content-login modal-content center-block">
+            <h3 class="text-center">Esqueceu sua senha?</h3>
+            <p class="text-center">Se você esqueceu sua senha, redefina-a aqui</p>
+            <div class="panel-body">
+                <form class="form">
+                    <fieldset>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                                <!--EMAIL ADDRESS-->
+                                <input id="emailInput" placeholder="endereço de e-mail" class="form-control" type="email" oninvalid="setCustomValidity('Por favor insira um email valido')" required="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <input id="reset-passwd" class="btn btn-lg btn-primary btn-block" value="Atualizar minha senha" type="button">
-                    </div>
-                </fieldset>
-            </form>
+                        <div class="form-group">
+                            <input id="reset-passwd" class="btn btn-lg btn-primary btn-block" value="Atualizar minha senha" type="button">
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
         </div>
-    </form>
-    <div>
+        <div class="clearfix"></div>
     </div>
-</div>
-<div class="clearfix"></div>
-</div>
-
+<?php } else {?>
+    <div class="container container-fluidr center-block">
+        <div class="content-login modal-content center-block">
+            <h3 class="text-center" style="color: blue;">Desculpe.</h3>
+            <p class="text-center">O Serviço de e-mail parece não estar ativo no momento, por favor entre em contato com o administrador para maiores informações.</p>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+<?php } ?>
 <script>
 $("#reset-passwd").click(function(){
     if($("#emailInput").val() != ''){
