--- a/apps/backend/views/settings/facebookTab.phtml
+++ b/apps/backend/views/settings/facebookTab.phtml
@@ -6,7 +6,7 @@
                     <label style="font-size: 18px;"> Adicionar Link da Página</label>
                 </div>
                 <div class="form-group input-group col-sm-10">
-                    <input type="checkbox" class="my-checkbox" checked>
+                    <input type="checkbox" name="fb_active" class="fb-checkbox" checked>
                 </div>
                 <div class="form-group input-group col-sm-10">
                     <span class="input-group-addon">facebook.com/</span>
@@ -79,4 +79,12 @@ $("#edit-facebook-account").click(function(){
         }
     });
 });
+
+
+$(".fb-checkbox").bootstrapSwitch({
+    state: <?= $fb_active ?>,
+    size: "small",
+    offColor: "warning"
+});
+
 </script>
