--- a/apps/backend/views/settings/twitterTab.phtml
+++ b/apps/backend/views/settings/twitterTab.phtml
@@ -6,7 +6,7 @@
                     <label style="font-size: 18px;"> Configurar API do Twitter</label>
                 </div>
                 <div class="form-group input-group col-sm-10">
-                    <input type="checkbox" class="my-checkbox" checked>
+                    <input type="checkbox" name="twitter_active" class="tw-checkbox" checked>
                 </div>
                 <div class="form-group input-group col-sm-10">
                     <span class="input-group-addon">@</span>
@@ -98,5 +98,11 @@ $("#edit-twitter-account").click(function(){
             }
         }
     });
+});
+
+$(".tw-checkbox").bootstrapSwitch({
+    state: <?= $tw_active ?>,
+    size: "small",
+    offColor: "warning"
 });
 </script>
